--- a/root.css
+++ b/root.css
@@ -40,7 +40,6 @@
     /* nav section */
 
     .nav-section {
-        /* flex-direction: column; */
         display: grid;
         grid-template-columns: repeat(12,1fr);
         grid-template-rows: repeat(2,1fr);
@@ -52,16 +51,13 @@
     }
 
     .nav-bar {
-        /* flex-direction: column; */
-        /* justify-content: space-between;
-        gap: 10px; */
         grid-column: 1/-1;
         grid-row: 2/3;
         width: 100%;
     }
 
     .nav-btn {
-        padding: 5px 13px;
+        padding: 5px 15px;
     }
 
     .download {
@@ -91,6 +87,18 @@
 
     .bio {
         order: 2;
+        margin-top: 30px;
+        text-align: center;
+    }
+
+    .social-media {
+        margin: 0 auto;
+        width: fit-content;
+    }
+
+    .skill {
+        /* gap: 10px; */
+        justify-content: center;
     }
 
 
@@ -98,6 +106,10 @@
 
     .poster {
         translate: 0 -20px;
+    }
+
+    .poster img {
+        width: 100%;
     }
 
 
@@ -129,11 +141,21 @@
 
     .experience-section {
         flex-direction: column;
+        padding: 50px 20px;
+        margin-top: 30px;
     }
 
     .experience,
     .exp-skill {
         padding: 0;
+    }
+
+    .skill-3 {
+        margin-bottom: 10px;
+    }
+
+    .exp-skill {
+        margin-top: 30px;
     }
 
 
@@ -153,6 +175,8 @@
     .project1,
     .project2 {
         flex-direction: column;
+        border-bottom: 2px solid var(--color);
+        padding: 20px 0;
     }
 
     .img-container img,
@@ -160,10 +184,31 @@
         width: 100%;
     }
 
+    .img-container2 {
+        order: 1;
+    }
+
+    .project-desc2 {
+        order: 2;
+    }
 
     /* footer */
 
     .nav-link ul {
         gap : 5px;
+    }
+
+
+    /* form */
+    .main-form {
+        padding: 40px 45px;
+    }
+
+    .name-section {
+        flex-direction: column;
+    }
+
+    .nav-link ul{
+        flex-direction: column;
     }
 }
